#:schema https://json.schemastore.org/pyproject.json

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adjunct"
description = "A collection of miscellaneous modules"
license = "MIT"
authors = [
	{name = "Keith Gaughan", email = "keith@gaughan.ie"},
]
requires-python = ">=3.8"
readme = "README.rst"
dynamic = ["version"]

[project.urls]
Source = "https://github.com/kgaughan/adjunct"

[tool.rye]
dev-dependencies = [
    "pytest>=8.2.2",
    "pytest-cov>=2.12.1",
    "mypy>=1.10.1",
]

[tool.hatch.version]
path = "src/adjunct/__init__.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=adjunct --junitxml=tests/results.xml --cov-report html"
testpaths = [
    "tests",
]
junit_suite_name = "adjunct"
junit_logging = "out-err"
junit_family = "xunit2"

[tool.mypy]
ignore_missing_imports = true
