#:schema https://json.schemastore.org/pyproject.json

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "adjunct"
dynamic = ["version"]
description = "A collection of miscellaneous modules"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Keith Gaughan", email = "keith@gaughan.ie" }]

[project.urls]
Documentation = "https://github.com/kgaughan/adjunct#readme"
Issues = "https://github.com/kgaughan/adjunct/issues"
Source = "https://github.com/kgaughan/adjunct"

[dependency-groups]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-awesome-pages-plugin>=2.10.1",
  "mkdocs-material>=9.7.0",
  "mkdocstrings[python]>=0.30.1",
  "mypy>=1.10.1",
  "pytest>=8.2.2",
  "pytest-cov>=2.12.1",
]

[tool.hatch.build.targets.sdist]
include = ["src/adjunct", "uv.lock"]

[tool.hatch.build.targets.wheel]
packages = ["src/adjunct"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/adjunct/_version.py"

[tool.black]
line-length = 120

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "A",
  # "ANN",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "EXE",
  "F",
  "FBT",
  "FLY",
  "FURB",
  "G",
  "I",
  "ICN",
  "ISC002",
  "LOG",
  "N",
  "PERF",
  "PIE",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  # "PT",
  "PYI",
  "Q",
  "RET",
  "RSE",
  "RUF",
  "S",
  "SIM",
  "SLOT",
  "T",
  "TC",
  "TID",
  "TRY",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "PLR0913", # Too many arguments
  "PLR2004", # Magic value used in comparison
  "PLW2901", # Redefined loop variable
  "S310",    # Audit URL open for permitted schemes
  "S317",    # Using xml to parse untrusted data is known to be vulnerable to XML attacks; use defusedxml equivalents
  "TID252",  # Prefer absolute imports over relative imports from parent modules
  "UP006",   # Use {to} instead of {from} for type annotation
  "UP035",   # Deprecated import
  "EM101",   # Exceptions must not use strings
  "EM102",   # Exception must not use f-string literal
  "TRY003",  # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["ANN", "PLR2004", "S101", "TID252", "E501", "T201", "E722"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --doctest-modules --cov=adjunct --junitxml=tests/results.xml --cov-report html"
junit_logging = "out-err"
junit_family = "xunit2"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["src/adjunct/_version.py"]

[tool.coverage.report]
ignore_errors = true
# Regexes for lines to exclude from consideration
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "pass",
  "^\\s*\\.\\.\\.\\s*$",
]

[tool.mypy]
ignore_missing_imports = true

[tool.tox]
requires = ["tox>=4", "tox-uv>=1"]
env_list = ["py311", "py312", "py313", "py314"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "Run test under {base_python}"
commands = [["pytest", "--basetemp={envtmpdir}"]]
